--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <h1>Pomodoro Timer</h1>
+    <div class="header">
+        <h1>Pomodoro Timer</h1>
+        <button class="settings-icone"> <i class="fa-duotone fa-solid fa-gear"></i></button> 
+    </div>
 
     <div class="mode-buttons">
         <button class="active" id="workBtn">Travail</button>
@@ -21,6 +25,22 @@
         <button id="toggleBtn">Démarrer</button>
         <button id="resetBtn">Réinitialiser</button>
     </div>
+
+    <div class="stain">
+        <input type="text" id="stainInput" placeholder="Ajouter une tache..."> 
+        <button type="submit">Ajouter</button>
+    </div>
+
+    <div class="settings">  
+      <!--  <label for="workDuration">Durée du travail (minutes):</label>
+        <input type="number" id="workDuration" value="25" min="1" max="60">
+
+        <label for="breakDuration">Durée de la pause (minutes):</label>
+        <input type="number" id="breakDuration" value="5" min="1" max="60">
+        --> 
+    </div>
+
+
 
     <script src="js/app.js" type="module"></script>
 </body>
