--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
         </dialog>
     </div>
 
-    <script src="js/app.js" type="module"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
