--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- ================================================================
-     🎨 VERSION COMPLÈTE DE VOTRE index.html AVEC TOUS LES AJOUTS
-     ================================================================ -->
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -28,7 +24,7 @@
             </div>
         </div>
 
-        <!-- Section des statistiques AMÉLIORÉE -->
+        <!-- Section des statistiques -->
         <div class="stats-section">
             <div class="stat-item">
                 <span class="stat-number" id="completedPomodoros">0</span>
@@ -43,7 +39,7 @@
                 <div class="stat-label">Série actuelle</div>
             </div>
             
-            <!-- NOUVEAU: Indicateur de sauvegarde -->
+            <!-- Indicateur de sauvegarde -->
             <div class="stat-item save-indicator" id="saveIndicator" title="État de sauvegarde">
                 <span class="stat-number">
                     <i class="fas fa-cloud-upload-alt" id="saveIcon"></i>
@@ -146,7 +142,7 @@
             </div>
         </dialog>
 
-        <!-- NOUVEAU: Dialog de gestion des données -->
+        <!-- Dialog de gestion des données -->
         <dialog id="dataManagementDialog">
             <div class="data-modal-header">
                 <h2 class="data-modal-title">💾 Gestion des données</h2>
@@ -156,12 +152,12 @@
             </div>
             
             <div class="data-modal-content">
-                <!-- Le contenu sera injecté par JavaScript -->
+                <!-- Le contenu sera injecté par JavaScript via updateDataManagementModal() -->
             </div>
         </dialog>
     </div>
 
-    <!-- NOUVEAU: Bouton flottant de gestion des données -->
+    <!-- Bouton flottant de gestion des données -->
     <button id="dataManagementBtn" class="data-management-btn" title="Gestion des données">
         <i class="fas fa-database"></i>
     </button>
